# amp-challenge-2027

./: LICENSE  README.md  pyproject.toml
scripts/: verify_submission.py
src/amp_challenge_2027/: generate.py
